# miniature-lamp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DYNAMIC_SCHEDULER_DISCOVERY.md  FLUX_DEPENDENCIES.md  IMPLEMENTATION_NOTES.md  LICENSE.txt  MIGRATION_v2.md  README.md  RELEASING.md  SESSION_SUMMARY.md  __init__.py  check_params.py  debug_upscale.sh  nodes.py  pyproject.toml  quick_test.sh  requirements.txt  test_node_local.py  test_tensor_fix.py
ComfyUI_DINO_FLUX_Upscale/: README.md  __init__.py  nodes.py  utils.py
comfyui_nodes/: README.md  __init__.py
docs/: BUG_FIX_FLUX_UPSCALE.md  BUG_FIX_TENSOR_DIMENSION.md  COMFYUI_NODE_IMPROVEMENTS.md  COMFYUI_NODE_STATUS.md  COMFYUI_REGISTRY_PUBLISHING.md  DEBUG_PLAN.md  DINO_CONDITIONING.md  FIX_CLIP_POOLED_OUTPUT.md  FIX_DOUBLE_PERMUTATION.md  FIX_TILED_UPSCALING.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INVESTIGATION_BICUBIC_QUALITY.md  PROMPT_STRATEGY.md  TROUBLESHOOTING.md  Using DINO for Image upscaling.md  node_architecture_draft.md  phase1_comfyui_fundamentals.md
docs/releases/v2.1.0/: CHANGELOG_ENTRY.md  README.md  TESTING.md
examples/: flux_poc.py  simple_poc.py
openspec/: project.md
openspec/changes/accept-external-model-vae/: proposal.md  tasks.md
research_notes/: node_architecture_draft.md
src/: __init__.py  comfyui_sampler.py  config.py  dino_conditioning.py  dino_extractor.py  flux_pipeline.py  upscaler.py
tests/: test_dino_conditioning.py  test_dino_extractor.py  test_flux_pipeline.py  test_upscaler.py
workflows/: README.md  basic_test.json  with_external_model.json
(+25 files in other folders)
